content/_generated-doc/2.7/config/quarkus-elytron-security-jdbc-principal-query-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elytron-security-jdbc-principal-query-config_configuration]]link:#quarkus-elytron-security-jdbc-principal-query-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.sql]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.sql[quarkus.security.jdbc.principal-query.sql]`

[.description]
--
The sql query to find the password
--|string 
|


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.datasource]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.datasource[quarkus.security.jdbc.principal-query.datasource]`

[.description]
--
The data source to use
--|string 
|


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.clear-password-mapper.enabled]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.clear-password-mapper.enabled[quarkus.security.jdbc.principal-query.clear-password-mapper.enabled]`

[.description]
--
If the clear-password-mapper is enabled.
--|boolean 
|`false`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.clear-password-mapper.password-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.clear-password-mapper.password-index[quarkus.security.jdbc.principal-query.clear-password-mapper.password-index]`

[.description]
--
The index (1 based numbering) of the column containing the clear password
--|int 
|`1`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.enabled]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.enabled[quarkus.security.jdbc.principal-query.bcrypt-password-mapper.enabled]`

[.description]
--
If the bcrypt-password-mapper is enabled.
--|boolean 
|`false`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.password-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.password-index[quarkus.security.jdbc.principal-query.bcrypt-password-mapper.password-index]`

[.description]
--
The index (1 based numbering) of the column containing the password hash
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.hash-encoding]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.hash-encoding[quarkus.security.jdbc.principal-query.bcrypt-password-mapper.hash-encoding]`

[.description]
--
A string referencing the password hash encoding ("BASE64" or "HEX")
--|`base64`, `hex` 
|`base64`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.salt-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.salt-index[quarkus.security.jdbc.principal-query.bcrypt-password-mapper.salt-index]`

[.description]
--
The index (1 based numbering) of the column containing the Bcrypt salt
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.salt-encoding]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.salt-encoding[quarkus.security.jdbc.principal-query.bcrypt-password-mapper.salt-encoding]`

[.description]
--
A string referencing the salt encoding ("BASE64" or "HEX")
--|`base64`, `hex` 
|`base64`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.iteration-count-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.bcrypt-password-mapper.iteration-count-index[quarkus.security.jdbc.principal-query.bcrypt-password-mapper.iteration-count-index]`

[.description]
--
The index (1 based numbering) of the column containing the Bcrypt iteration count
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.attribute-mappings.-attribute-mappings-.index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.attribute-mappings.-attribute-mappings-.index[quarkus.security.jdbc.principal-query.attribute-mappings."attribute-mappings".index]`

[.description]
--
The index (1 based numbering) of column to map
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.attribute-mappings.-attribute-mappings-.to]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.attribute-mappings.-attribute-mappings-.to[quarkus.security.jdbc.principal-query.attribute-mappings."attribute-mappings".to]`

[.description]
--
The target attribute name
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.sql]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.sql[quarkus.security.jdbc.principal-query."named-principal-queries".sql]`

[.description]
--
The sql query to find the password
--|string 
|


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.datasource]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.datasource[quarkus.security.jdbc.principal-query."named-principal-queries".datasource]`

[.description]
--
The data source to use
--|string 
|


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.attribute-mappings.-attribute-mappings-.index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.attribute-mappings.-attribute-mappings-.index[quarkus.security.jdbc.principal-query."named-principal-queries".attribute-mappings."attribute-mappings".index]`

[.description]
--
The index (1 based numbering) of column to map
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.attribute-mappings.-attribute-mappings-.to]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.attribute-mappings.-attribute-mappings-.to[quarkus.security.jdbc.principal-query."named-principal-queries".attribute-mappings."attribute-mappings".to]`

[.description]
--
The target attribute name
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.clear-password-mapper.enabled]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.clear-password-mapper.enabled[quarkus.security.jdbc.principal-query."named-principal-queries".clear-password-mapper.enabled]`

[.description]
--
If the clear-password-mapper is enabled.
--|boolean 
|`false`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.clear-password-mapper.password-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.clear-password-mapper.password-index[quarkus.security.jdbc.principal-query."named-principal-queries".clear-password-mapper.password-index]`

[.description]
--
The index (1 based numbering) of the column containing the clear password
--|int 
|`1`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.enabled]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.enabled[quarkus.security.jdbc.principal-query."named-principal-queries".bcrypt-password-mapper.enabled]`

[.description]
--
If the bcrypt-password-mapper is enabled.
--|boolean 
|`false`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.password-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.password-index[quarkus.security.jdbc.principal-query."named-principal-queries".bcrypt-password-mapper.password-index]`

[.description]
--
The index (1 based numbering) of the column containing the password hash
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.hash-encoding]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.hash-encoding[quarkus.security.jdbc.principal-query."named-principal-queries".bcrypt-password-mapper.hash-encoding]`

[.description]
--
A string referencing the password hash encoding ("BASE64" or "HEX")
--|`base64`, `hex` 
|`base64`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.salt-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.salt-index[quarkus.security.jdbc.principal-query."named-principal-queries".bcrypt-password-mapper.salt-index]`

[.description]
--
The index (1 based numbering) of the column containing the Bcrypt salt
--|int 
|`0`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.salt-encoding]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.salt-encoding[quarkus.security.jdbc.principal-query."named-principal-queries".bcrypt-password-mapper.salt-encoding]`

[.description]
--
A string referencing the salt encoding ("BASE64" or "HEX")
--|`base64`, `hex` 
|`base64`


a| [[quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.iteration-count-index]]`link:#quarkus-elytron-security-jdbc-principal-query-config_quarkus.security.jdbc.principal-query.-named-principal-queries-.bcrypt-password-mapper.iteration-count-index[quarkus.security.jdbc.principal-query."named-principal-queries".bcrypt-password-mapper.iteration-count-index]`

[.description]
--
The index (1 based numbering) of the column containing the Bcrypt iteration count
--|int 
|`0`

|===